# AOC_2024

./: .gitignore  Cargo.toml
day1/: day1.rs
day2/: day2.rs
day3/: day3.rs
day4/: day4.rs
day5/: day5.rs
day6/: day6.rs
tools/: input_reader.rs
