[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[lib]
name = "input_reader"           # The name of the target.
path = "tools/input_reader.rs"    # The source file of the target.

[[bin]]
name = "day1"
path = "day1/day1.rs"

[[bin]]
name = "day2"
path = "day2/day2.rs"

[[bin]]
name = "day3"
path = "day3/day3.rs"

[[bin]]
name = "day4"
path = "day4/day4.rs"

[[bin]]
name = "day5"
path = "day5/day5.rs"